name:                rolodex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rolodex#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , scotty
                     , sqlite-simple
                     , text
                     , wai
  default-language:    Haskell2010

executable rolodex-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rolodex
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/rolodex
